# FrameEdit

./: .gitignore  AGENTS.md  README.md  config.yaml  generate.py  passenger_wsgi.py  pyproject.toml
.github/workflows/: ci.yml  deploy-cpanel.yml
assets/fonts/: README.md
data/presets/: mahogany-furniture.yaml  starter-brand.yaml
docs/: agent-roadmap.md  cpanel-deployment.md  decisions.md  linkedin-post-guide.md  mahogany-demo-walkthrough.md  open-questions.md  requirements.md  web-ui-agentic-workflow.md  web-ui-requirements.md
src/frameedit/: __init__.py  cli.py  config.py  image_ops.py  pipeline.py  render.py
src/frameedit/web_services/: __init__.py  assets.py  carousel_panorama.py  carousel_projects.py  generation.py  grid_mosaic.py  paths.py  presets.py  projects.py  slugs.py  zipfiles.py
tests/: test_brand_assets.py  test_config.py  test_image_ops.py  test_pipeline.py  test_text_normalization.py  test_web_app.py  test_web_services.py  web_helpers.py
tools/: create_placeholder_assets.py
web_app/: __init__.py  app.py
web_app/static/: app.css
web_app/templates/: all_in_one.html  all_in_one_preview.html  base.html  carousel_panorama.html  carousel_panorama_result.html  grid_mosaic.html  grid_mosaic_result.html  login.html  posts.html  posts_preview.html  preset_form.html  project_detail.html  recent.html  reel_cover.html  settings.html  temp_result.html
