[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frameedit"
version = "0.1.0"
description = "Local-first image production for branded Instagram posts, reel covers, mosaics, and carousels."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0",
  "Pillow>=10.0",
  "pillow-heif>=0.16",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
frameedit = "frameedit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
